update CDN to BootCDN

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <title>Wake-on-lan Web</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="static/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.6.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
-  <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" />
-  <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
+  <link type="text/css" rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/jsgrid/1.5.3/jsgrid.min.css" />
+  <link type="text/css" rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/jsgrid/1.5.3/jsgrid-theme.min.css" />
   <link rel="stylesheet" href="static/wolweb.css">
 </head>
 
@@ -63,10 +63,10 @@
     window.vDir = "{{$.VDir}}"
     window.bCastIP = "{{$.BCastIP}}"
   </script>
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
-  <script src="static/bootstrap.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.6.2/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://cdn.bootcdn.net/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
   <script src="static/wolweb.js"></script>
 
 </body>
